--- a/src/app/advanced-web-tables/advanced-web-tables.component.html
+++ b/src/app/advanced-web-tables/advanced-web-tables.component.html
@@ -5,8 +5,8 @@
         <div class="col-sm-9 col-md-7 col-lg-7 mx-auto">
           <div class="card card-signin my-5">
             <div class="card-body">
-              <h5 class="card-title text-center">Advanced W eb Table</h5>
-                <div #alert class="alert alert-primary " role="alert">
+              <h5 class="card-title text-center">Advanced Web Table</h5>
+                <div #alert id="mlpok" name="123vbhg" class="alert alert-primary " role="alert">
 <mat-paginator 
               [pageSizeOptions]="[5, 10, 25, 100]">
 </mat-paginator>
