--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -7,31 +7,31 @@
         <div class="card card-signin my-5">
           <div class="card-body">
             <h5 class="card-title text-center">Alert</h5>
-              <div #alert class="alert alert-primary " role="alert">
+              <div #alert id="alert" name="alert" class="alert alert-primary " role="alert">
                <label for="inputName">
                 Click the button to display a alert box</label><br/>
-                  <button (click)="myFunction1()">Alert Box</button>
+                  <button id="12345rtf" name="qawse" class="asdfgh" (click)="myFunction1()">Alert Box</button>
               </div>
-              <div #alert class="alert alert-primary " role="alert">
+              <div #alert id="alert2" name="alert2" class="alert alert-primary " role="alert">
                 <label for="inputName">
                   Click the button to display a alert box</label><br/>
-                    <button (click)="myFunction2()">Conform Box</button>
+                    <button id="zxcvbnm" name="zxcvbnm" class="qwerty" (click)="myFunction2()">Conform Box</button>
               </div>
-              <div #alert class="alert alert-primary " role="alert">
+              <div #alert id="alert3" name="alert3" class="alert alert-primary " role="alert">
                 <label for="inputName">
                   Click the button to display a alert box</label><br/>
-                    <button (click)="myFunction3()">prompt Box</button>
+                    <button id="aswdefr" name="aswdefr" class="vbnm" (click)="myFunction3()">prompt Box</button>
                  </div>
-                 <div #alert class="alert alert-primary " role="alert">
+                 <div #alert id="alert4" name="alert4" class="alert alert-primary " role="alert">
                   <label for="inputName">
                     Click the button to learn line-breaks in an alert</label><br/>
-                      <button (click)="myFunction4()">Line Breaks</button>
+                      <button id="zdfrnm" name="zdfrnm" class="qmkil" (click)="myFunction4()">Line Breaks</button>
                  </div>
-                 <div #alert class="alert alert-primary " role="alert">
+                 <div #alert id="alert5" name="alert5" class="alert alert-primary " role="alert">
                   <label for="inputName">
                     Click the below button and click OK.
                   </label><br/>
-                      <button (click)="myFunction5()">Sweet Box</button>
+                      <button id="zxcvbhnj" name="zxcvbhnj" class="mklop" (click)="myFunction5()">Sweet Box</button>
                 </div>
           </div>
         </div>
