--- a/src/app/autocomplete/autocomplete.component.html
+++ b/src/app/autocomplete/autocomplete.component.html
@@ -6,8 +6,8 @@
             <div class="card-body">
               <h2 class="card-title text-center">Auto complete</h2>
               <form class="example-form">
-                <mat-form-field class="example-full-width">
-                  <input type="text"
+                <mat-form-field id="z123m"class="example-full-width">
+                  <input type="text" id="nmjki" class="lopk" name="nmjki"
                          placeholder="Pick one"
                          aria-label="Number"
                          matInput
