--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -8,25 +8,25 @@
                 <div class="form-label-group">
                  <h5>
                   Click button to travel home page</h5>
-                  <a href="http://localhost:4200/" class="btn btn-dark stretched-link">Go somewhere</a>
+                  <a href="http://localhost:4200/" id ="button1"name="button1" class="btn btn-dark stretched-link">Go somewhere</a>
                 </div>
                 <div class="form-label-group">
                  <h5>
                     Find position of button (x,y)</h5>
-                  <button id="postion" class="btn btn-dark">Get postion</button>
+                  <button id="button2" name="button2" class="btn btn-dark">Get postion</button>
                 </div>
                 <div class="form-label-group">
                     <h5>Find button color</h5>
-                    <button type="button" class="btn btn-primary">Primary</button>
+                    <button id="button3" name="button3" type="button" class="btn btn-primary">Primary</button>
                    </div>
                    <div class="form-label-group">
                     <h5>Find the height and width</h5>
-                    <input type="submit" class="btn btn-dark" value="Submit Button">
+                    <input id="button4" name="button4"  type="submit" class="btn btn-dark" value="Submit Button">
                    </div>
                    <div class="form-label-group">
                     <h5>
                        spining button</h5>
-                        <button class="btn btn-dark" disabled>
+                        <button id="12q3w4m" name="button5"  class="btn btn-dark" disabled>
                           <span class="spinner-border spinner-border-sm"></span>
                           Loading..
                         </button>
