--- a/src/app/calender/calender.component.html
+++ b/src/app/calender/calender.component.html
@@ -7,10 +7,8 @@
             <div class="card-body">
               <h5 class="card-title text-center">calender</h5>
               <label for="birthday">Select 10th day of following month:</label><br/>
-              <input type="date" id="birthday" name="birthday">
+              <input type="date" id="birthday" class="ramko" name="birthday">
               <br/>
-              
-              
             </div>
           </div>
         </div>
