--- a/src/app/checkbox/checkbox.component.html
+++ b/src/app/checkbox/checkbox.component.html
@@ -11,48 +11,48 @@
                         Select all below checkboxes
                     </label> 
                     <div class="checkbox">
-                        <label><input type="checkbox" value="">Option 1</label>
+                        <label><input type="checkbox" id="checkbox" name="checkbox" class="checkbox" value="">Option 1</label>
                       </div>
                       <div class="checkbox">
-                        <label><input type="checkbox" value="">Option 2</label>
+                        <label><input type="checkbox" id="checkbox2" name="checkbox2" class="checkbox2" value="">Option 2</label>
                       </div>
                       <div class="checkbox disabled">
-                        <label><input type="checkbox" value="">Option 3</label>
+                        <label><input type="checkbox"id="checkbox3" name="checkbox3" class="checkbox3" value="">Option 3</label>
                       </div>
                       <div class="checkbox disabled">
-                        <label><input type="checkbox" value="">Option 3</label>
+                        <label><input type="checkbox"id="checkbox4" name="checkbox4" class="checkbox4" value="">Option 3</label>
                       </div>
                       <label for="inputName">
                         Select the languages that you know?
                     </label> 
                     <div class="checkbox">
-                        <label><input type="checkbox" value="">Java</label>
+                        <label><input type="checkbox" id="checkbox5" name="checkbox5" class="checkbox5" value="">Java</label>
                       </div>
                       <div class="checkbox">
-                        <label><input type="checkbox" value="">Sql</label>
+                        <label><input type="checkbox" id="checkbox6" name="checkbox6" class="checkbox6" value="">Sql</label>
                       </div>
                       <div class="checkbox">
-                        <label><input type="checkbox" value="">Html</label>
+                        <label><input type="checkbox"id="checkbox7" name="checkbox7" class="checkbox7" value="">Html</label>
                       </div>
                       <div class="checkbox">
-                        <label><input type="checkbox" value="" >Aws</label>
+                        <label><input type="checkbox" id="checkbox8" name="checkbox8" class="checkbox8" value="" >Aws</label>
                       </div>
                       <label for="inputName">
                         Confirm Selenium is checked
                     </label> 
                     <div class="checkbox">
-                        <label><input type="checkbox" value="">Selenium</label>
+                        <label><input type="checkbox" id="checkbox9" name="checkbox9" class="checkbox9"  value="">Selenium</label>
                       </div>
                       
                       <label for="inputName">
                         DeSelect only checked
                     </label> 
                     <div class="checkbox">
-                        <label><input type="checkbox" value="">Not Selected
+                        <label><input type="checkbox" id="checkbox10" name="checkbox10" class="checkbox10" value="">Not Selected
                         </label>
                       </div>
                       <div class="checkbox">
-                        <label><input type="checkbox" value="">Selected
+                        <label><input type="checkbox" id="checkbox10" name="checkbox10" class="checkbox10" value="">Selected
                         </label>
                       </div>
                       
