--- a/src/app/downloadfiles/downloadfiles.component.html
+++ b/src/app/downloadfiles/downloadfiles.component.html
@@ -7,9 +7,9 @@
           <div class="card card-signin my-5">
             <div class="card-body">
               <h5 class="card-title text-center">download</h5>
-              <a [href]="fileUrl" download="file.xlsx">Download Excel</a><br/>
-<a [href]="fileUrl" download="file.pdf">Download pdf</a><br/>
-<a [href]="fileUrl" download="file.txt">Download text</a><br/>
+              <a name="link1" class="linl1" id="link1" [href]="fileUrl" download="file.xlsx">Download Excel</a><br/>
+<a name="link2" class="link2" id="link2" [href]="fileUrl" download="file.pdf">Download pdf</a><br/>
+<a name="link3" class="linl3" id="link3" [href]="fileUrl" download="file.txt">Download text</a><br/>
 
               
               
