--- a/src/app/frame/frame.component.html
+++ b/src/app/frame/frame.component.html
@@ -1,2 +1,43 @@
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">frames</h5>
+                <div class="form-label-group">
+                    <iframe id="frame">
+                 <label for="inputName">
+                    I am inside a frame</label>
+                    <button id="Click" name onclick="change()">Click Me</button>
+                </iframe>
+                </div>
+                <div class="form-label-group">
+                    <iframe id="#" >
+                        <iframe id="frame">
+                        <label for="inputName">
+                            I am inside a nested frame</label>
+                           <button id="Click" onclick="change()">Click Me</button>
+                        
+                       </iframe>
+                    </iframe>
+                </div>
+                <div class="form-label-group">
+                    <iframe id="frame">
+                        <iframe id="frame">
+                            <iframe id="frame">
+                        <label for="inputName">
+                            Find total number of frames.</label>
+                       </iframe>
+                    </iframe>
+                    </iframe>
+                </div>
+                  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 
 
