--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -9,14 +9,14 @@
                  <h5>
                     Click on this image to go home page</h5>
         
-                        <a href="http://localhost:4200/" class="material-icons text-black"style=" font-size: 100px">laptop_windows</a>
+                        <a id="edr" name="drf" href="http://localhost:4200/" class="material-icons text-black"style=" font-size: 90px">laptop_windows</a>
                         
                 
                 </div>
                 <div class="form-label-group">
                  <h5>
                     Am I Broken Image?</h5>
-                    <i class="material-icons text-primary"style=" font-size: 100px">
+                    <i id="edr1" name="drf1" class="material-icons text-primary"style=" font-size: 90px">
                         broken_image
                         </i>
                 </div>
@@ -24,7 +24,7 @@
                     <h5>Click me using Keyboard or Mouse
                     </h5>
                     
-                    <a href="http://localhost:4200/" class="material-icons text-black"style=" font-size: 100px">keyboard</a>
+                    <a id="edr2" name="drf2" href="http://localhost:4200/" class="material-icons text-black"style=" font-size: 90px">keyboard</a>
                    </div>
             </div>
           </div>
