--- a/src/app/mousehover/mousehover.component.html
+++ b/src/app/mousehover/mousehover.component.html
@@ -4,18 +4,13 @@
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
           <div class="card card-signin my-5">
             <div class="card-body">
-              <h5 class="card-title text-center">Mouse hover</h5>
-              <span tooltip="<p>Hello i'm a <strong>bold</strong> text!</p>">
+              <h5 id="center" name="center" class="card-title text-center">Mouse hover</h5>
+              <span id="w3e4" name="w3e4" class="w3e4" tooltip="<p>Hello i'm a <strong>bold</strong> text!</p>">
                 mouse hover with HTML content
               </span>
               <ng-template #HtmlContent>
                 <p>Hello i'm a <strong>Strong</strong> text!</p>
-                
-
               </ng-template>
-               
-              
-              
             </div>
           </div>
         </div>
