--- a/src/app/radiobutton/radiobutton.component.html
+++ b/src/app/radiobutton/radiobutton.component.html
@@ -13,14 +13,14 @@
                   <div class="radio">
                     <label for="Unchecked">
                        NO                            
-                     <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                     <input type="radio" id="name1" name="name1" class="form-control" required autofocus>
                       </label>
                   </div> 
                   <div class="radio">
                       <label for="Unchecked">
                         Yes
                                                     
-                       <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                       <input type="radio" id="name2" name="name2" class="form-control" required autofocus>
                         </label>
                   </div>
                      </div>
@@ -32,14 +32,14 @@
                       <label for="Unchecked">
                         Unchecked
                                                     
-                       <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                       <input type="radio"id="name3" name="name3" class="form-control"  required autofocus>
                         </label>
                     </div> 
                     <div class="radio">
                         <label for="Unchecked">
                           Unchecked
                                                       
-                         <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                         <input type="radio"id="name4" name="name4" class="form-control"  required autofocus>
                           </label>
                     </div>
             </div>
@@ -51,20 +51,20 @@
                       <label for="inputName">
                         1 - 20 years                          
                                                   
-                       <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                       <input type="radio"id="name5" name="name5" class="form-control"  required autofocus>
                         </label> </div>
                         <div class="radio">
                         <label for="inputName">
                            21 - 40 years  
                                                       
-                          <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                          <input type="radio"id="name6" name="name6" class="form-control"  required autofocus>
                            </label>
                         </div>
                         <div class="radio">
                            <label for="inputName">
                             41 - 100 years  
                             
-                          <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                          <input type="radio"id="name7" name="name7" class="form-control"  required autofocus>
                            </label></div>
                    </div>
             </div>
