--- a/src/app/selectable/selectable.component.html
+++ b/src/app/selectable/selectable.component.html
@@ -6,15 +6,15 @@
             <div class="card-body">
               <h5 class="card-title text-center">selectable</h5>
               <div class="btn-group-vertical">
-                <button type="button" class="btn btn-dark">Sachin Ramesh Tendulkar</button>
-                <button type="button" class="btn btn-dark">Virender Shewag</button>
-                <button type="button" class="btn btn-dark">Saurav Ganguly</button>
-                <button type="button" class="btn btn-dark">Rahul Dravid</button>
-                <button type="button" class="btn btn-dark">Yuvraj Singh</button>
-                <button type="button" class="btn btn-dark">Suresh Raina</button>
-                <button type="button" class="btn btn-dark">Rohith Sharma</button>
-                <button type="button" class="btn btn-dark">Zaheer Khan</button>
-                <button type="button" class="btn btn-dark">Munaf Patel</button>
+                <button  type="button" id="dst1" name="dsr1" class="btn btn-dark">Sachin Ramesh Tendulkar</button>
+                <button  type="button" id="dst2" name="dsr2" class="btn btn-dark">Virender Shewag</button>
+                <button  type="button" id="dst3" name="dsr3" class="btn btn-dark">Saurav Ganguly</button>
+                <button  type="button" id="dst4" name="dsr4" class="btn btn-dark">Rahul Dravid</button>
+                <button  type="button" id="dst5" name="dsr5" class="btn btn-dark">Yuvraj Singh</button>
+                <button  type="button" id="dst6" name="dsr6" class="btn btn-dark">Suresh Raina</button>
+                <button  type="button" id="dst7" name="dsr7" class="btn btn-dark">Rohith Sharma</button>
+                <button  type="button" id="dst8" name="dsr8" class="btn btn-dark">Zaheer Khan</button>
+                <button  type="button" id="dst9" name="dsr9" class="btn btn-dark">Munaf Patel</button>
               </div>
               
             </div>
