--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -7,7 +7,7 @@
                 <div class="card-body">
                   <h5 class="card-title text-center">Table</h5>
                     <div class="form-label-group">
-                        <table class="table">
+                        <table class="table" id="table" name="table">
                             <thead>
                               <tr>
                                 <th>Firstname</th>
@@ -21,21 +21,21 @@
                                 <td>Don</td>
                                 <td>Rocky</td>
                                 <td>john@example.com</td>
-                                <td><label><input type="checkbox" value="">Selected
+                                <td><label><input class="q" id="q" name="q" type="checkbox" value="">Selected
                                 </label></td>
                               </tr>
                               <tr>
                                 <td>Bhai</td>
                                 <td>Mary</td>
                                 <td>mary@example.com</td>
-                                <td><label><input type="checkbox" value="">Selected
+                                <td><label><input class="qe" id="qe" name="qe" type="checkbox" value="">Selected
                                 </label></td>
                               </tr>
                               <tr>
                                 <td>July</td>
                                 <td>soole</td>
                                 <td>july@example.com</td>
-                                <td><label><input type="checkbox" value="">Selected
+                                <td><label><input class="qd" id="qd" name="qd" type="checkbox" value="">Selected
                                 </label></td>
                               </tr>
                             </tbody>
