--- a/src/app/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip.component.html
@@ -7,7 +7,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">Tooltip</h5>
               
-              <button mat-raised-button 
+              <button id="button" name="button" class="button"  mat-raised-button 
               matTooltip="I love u dude "
               aria-label="Button that displays a tooltip when focused or hovered over">
         Just touch and see what happens
