--- a/src/app/uploadfiles/uploadfiles.component.html
+++ b/src/app/uploadfiles/uploadfiles.component.html
@@ -7,7 +7,7 @@
             <div class="card-body">
               <h5 class="card-title text-center">upload files</h5>
               
-<input type="file" id="myFile">
+                       <input type="file" id="myFile" class="myFile" name="myFile">
               <br/>
             </div>
           </div>
