--- a/src/app/waitforalert/waitforalert.component.html
+++ b/src/app/waitforalert/waitforalert.component.html
@@ -10,7 +10,7 @@
                  <label for="inputName">
                   Click the button to display a alert box</label><br/>
                   <div #alert class="alert alert-primary " role="alert">
-                        <button (click)="mybom()">Wait for 5 seconds</button>
+                        <button id="mye" class="mye" name="mye" (click)="mybom()">Wait for 5 seconds</button>
                    </div>
                   </div>
             </div>
