--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -10,22 +10,22 @@
                 <div #alert class="alert alert-primary " role="alert">
                  <label for="inputName">
                     Click button to open home page in New Window</label><br/>
-                    <button (click)="my()">Open Home Page</button>
+                    <button id="mye" class="mye" name="mye" (click)="my()">Open Home Page</button>
                 </div>
                 <div #alert class="alert alert-primary " role="alert">
                   <label for="inputName">
                     Find the number of opened windows</label><br/>
-                      <button (click)="myFunction()">Open Multiple Windows</button>
+                      <button id="mye1" class="mye1" name="mye1" (click)="myFunction()">Open Multiple Windows</button>
                 </div>
                 <div #alert class="alert alert-primary " role="alert">
                   <label for="inputName">
                     Close all except this window</label><br/>
-                      <button (click)="mywindows()">Do not close me</button>
+                      <button id="mye2" class="mye2" name="mye2" (click)="mywindows()">Do not close me</button>
                    </div>
                    <div #alert class="alert alert-primary " role="alert">
                     <label for="inputName">
                         Wait for 2 new Windows to open</label><br/>
-                        <button (click)="mybom()">Wait for 5 seconds</button>
+                        <button id="mye3" class="mye3" name="mye3" (click)="mybom()">Wait for 5 seconds</button>
                    </div>
                   
             </div>
