--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow ">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Boot</a>
+      <a class="navbar-brand" href="#">RUTO</a>
       <a class="navbar-brand"  routerLink="./home">Home </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
