--- a/src/app/hiperlink/hiperlink.component.html
+++ b/src/app/hiperlink/hiperlink.component.html
@@ -8,22 +8,22 @@
                 <div class="form-label-group">
                  <h5>
                     Go to Home Page</h5>
-                  <a href="http://localhost:4200/" class="btn btn-dark stretched-link">Go to Home</a>
+                  <a href="http://localhost:4200/" id="bhu" name="edr" class="btn btn-dark stretched-link">Go to Home</a>
                 </div>
                 <div class="form-label-group">
                  <h5>
                     Find where am supposed to go without clicking me?</h5>
-                    <a href="http://localhost:4200/button" class="btn btn-dark stretched-link">Go somewhere</a>
+                    <a href="http://localhost:4200/button" id="bhu1" name="edr1" class="btn btn-dark stretched-link">Go somewhere</a>
                 </div>
                 <div class="form-label-group">
                     <h5>
                         Verify am I broken?</h5>
-                        <a href="http://www.404.com/" class="btn btn-dark stretched-link">Go somewhere</a>
+                        <a href="http://www.404.com/"id="bhu2" name="edr2" class="btn btn-dark stretched-link">Go somewhere</a>
                    </div>
                    <div class="form-label-group">
                     <h5>Go to Home Page (Interact with same link name)
                     </h5>
-                    <a href="http://localhost:4200/button" class="btn btn-dark stretched-link">Go somewhere</a>
+                    <a href="http://localhost:4200/button" id="bhu3" name="edr3" class="btn btn-dark stretched-link">Go somewhere</a>
                    </div>
               
             </div>
