--- a/src/app/sortable/sortable.component.html
+++ b/src/app/sortable/sortable.component.html
@@ -14,7 +14,7 @@
         [cdkDropListData]="todo"
         class="example-list"
         (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+        <div class="example-box" name="rdt" id="rdtyg" *ngFor="let item of todo" cdkDrag>{{item}}</div>
       </div>
     </div>
   
