--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -8,7 +8,7 @@
                 <div class="form-label-group">
                  <h5>
                   Click button to travel home page</h5>
-                  <a href="http://localhost:4200/" id ="button1"name="button1" class="btn btn-dark stretched-link">Go somewhere</a>
+                  <a routerLink="/" id ="button1"name="button1" class="btn btn-dark stretched-link">Go somewhere</a>
                 </div>
                 <div class="form-label-group">
                  <h5>
