--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-label-group">
                     <label for="inputName">Get default text entered</label>
-                     <input type="name"id="name" class="form-control" value="kushik" required autofocus>
+                     <input type="name"id="name" class="form-control" value="sachin" required autofocus>
                    </div>
                    <div class="form-label-group">
                     <label for="inputName">Clear the text</label>
