--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,8 @@
 
+            <nav class="navbar navbar-light bg-light fixed-bottom text-center">
+                <footer id="sticky-footer" class="py-2 bg-light footer-center">
+                    <h5>Copyright &copy; Your Website</h5>
+                </footer>
+          
+            </nav>
+       
