--- a/src/app/frame/frame.component.html
+++ b/src/app/frame/frame.component.html
@@ -5,34 +5,10 @@
           <div class="card card-signin my-5">
             <div class="card-body">
               <h5 class="card-title text-center">frames</h5>
-                <div class="form-label-group">
-                    <iframe id="frame">
-                 <label for="inputName">
-                    I am inside a frame</label>
-                    <button id="Click" name onclick="change()">Click Me</button>
+                <div class="form-label-group text-center">
+                  <iframe src="iframe.html" width="400" height="400">
                 </iframe>
                 </div>
-                <div class="form-label-group">
-                    <iframe id="#" >
-                        <iframe id="frame">
-                        <label for="inputName">
-                            I am inside a nested frame</label>
-                           <button id="Click" onclick="change()">Click Me</button>
-                        
-                       </iframe>
-                    </iframe>
-                </div>
-                <div class="form-label-group">
-                    <iframe id="frame">
-                        <iframe id="frame">
-                            <iframe id="frame">
-                        <label for="inputName">
-                            Find total number of frames.</label>
-                       </iframe>
-                    </iframe>
-                    </iframe>
-                </div>
-                  
             </div>
           </div>
         </div>
