--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow ">
-    <div class="container">
-      <a class="navbar-brand" href="#">RUTO</a>
-      <a class="navbar-brand"  routerLink="./home">Home </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </nav>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Letcode.in
+  </a>
+  <div>
+    <form class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-success my-2 my-sm-0" (click)="myFunction5()" type="submit">About me</button>
+    </form>
+  </div>
+</nav>
       
