--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<div class="container justify-content-center  ">
-    <div class="row justify-content-center">
+<div class="container justify-content-center">
+    
+    <div class="row justify-content-center m-top-bottom">
 <!-- <app-edit></app-edit> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
